Update documentation, add transforms and conversions modules and add tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,10 @@ catkin_python_setup()
 catkin_package(
   DEPENDS OpenRAVE
 )
+
+# Tests
+catkin_add_nosetests(tests/test_conversions.py)
+catkin_add_nosetests(tests/test_kinematics.py)
+catkin_add_nosetests(tests/test_planning.py)
+catkin_add_nosetests(tests/test_transforms.py)
+catkin_add_nosetests(tests/test_visual.py)
