Source new catkin workspace

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,5 +50,7 @@ before_script:
 script:
   - cd ~/catkin_ws
   - catkin_make
+  - source devel/setup.bash
+  - echo $ROS_PACKAGE_PATH
   - cd src/raveutils/tests/
   - nosetests -v -s
