--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>raveutils</name>
   <version>0.1.0</version>
   <description>Utilities package for OpenRAVE</description>
@@ -7,15 +7,16 @@
   <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
   <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
   <license>BSD 3-Clause</license>
+  <url type="website">https://crigroup.github.io/raveutils/</url>
   <url type="repository">https://github.com/crigroup/raveutils</url>
   <url type="bugtracker">https://github.com/crigroup/raveutils/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>python-numpy</run_depend>
+  <depend>python-numpy</depend>
 
-  <export>
-    <rosdoc config="rosdoc.yaml"/>
-  </export>
+  <doc_depend>python-sphinx</doc_depend>
+  <doc_depend>python-sphinx-rtd-theme</doc_depend>
+  <doc_depend>rosdoc_lite</doc_depend>
 
 </package>
